<resources>

    <string name="app_name">Eventsly</string>
    <string name="btnExit">Exit</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnLogin">Login</string>
    <string name="imageLogo">Logo</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnNewUsers">New Users</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnCancelSignUp">Cancel</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="labelRoleTypeText">Choose your role:</string>
    <string name="btnHost">Host</string>
    <string name="btnAttendee">Attendee</string>
    <string name="btnHostCheckIn">Check-in Guests</string>
    <string name="btnHostView">View Events</string>
    <string name="btnHostCreate">Create Events</string>
    <string name="labelHostOptions">Host Options:</string>
    <string name="labelAttendeeOptions">Attendee Options:</string>
    <string name="btnAttendeeCheckIn">Check-in</string>
    <string name="btnAttendeeCheckOut">Checkout</string>
    <string name="btnAttendeeBadge">Badge</string>
    <string name="hintEventName">Event Name</string>
    <string name="hintAddress">Address</string>
    <string name="hintDateAndTime">Date and Time</string>
    <string name="spinnerEventType">Type</string>
    <string name="hintDescription">Type in Event Description here.</string>
    <string name="btnCreateEvent">Create Event</string>
    <string name="btnCancelCreateEvent">Cancel</string>
    <string name="btnEditEvent">Edit</string>
    <string name="labelRegisteredGuests">Registered Guests:</string>
    <string name="btnViewDetails">View Details</string>
    <string name="btnSaveEditEvent">Save</string>
    <string name="btnHostMenu">Main Menu</string>
    <string name="editTextRegisterFirstName">First Name</string>
    <string name="editTextRegisterLastName">Last Name</string>
    <string name="editTextRegisterEmail">Email Address</string>
    <string name="btnRegister">Register</string>
    <string name="btnRegisterHostMenu">Main Menu</string>
    <string name="btnRegisterGuests">Register Guests</string>
    <string name="editTextRegisterAccess">Access Identification</string>
    <string name="labelGuestCheckIn">Please place your device up against the Host\'s device now.</string>
    <string name="labelHostCheckIn">Please place your device up against the Guest\'s device now.</string>
    <string name="btnSendEmail">Send Credentials</string>
    <string name="btnCheckCredentials">Check Credentials</string>
    <string name="btnSeeCredentials">See Credentials</string>
    <string name="labelGuestCreds"></string>
    <string name="btnCheckInGuest">Check-In Guest</string>
    <string name="labelBadge"></string>
    <string name="btnGuestMenu">Main Menu</string>

    <string-array name="EventTypes_array">
        <item>Select Event Type</item>
        <item>Conference</item>
        <item>Concert</item>
        <item>Sporting Event</item>
        <item>Other</item>
    </string-array>

</resources>
