<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Host">


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/labelHostOptions"
        android:textStyle="italic"
        android:textColor="#fffdfdfe"
        android:textSize="42sp"
        android:text="@string/labelHostOptions"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/btnHostCreate"
        android:id="@+id/btnCreate"
        android:layout_marginTop="40dp"
        android:onClick="onCreateClick"
        android:background="@drawable/eventsly_buttons"
        android:clickable="true"
        android:textColor="#fffdfdfe"
        android:textSize="35sp"
        android:textStyle="italic"
        android:layout_below="@+id/labelHostOptions"
        android:layout_alignEnd="@+id/labelHostOptions"
        android:layout_alignStart="@+id/labelHostOptions" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/btnHostView"
        android:id="@+id/btnView"
        android:layout_marginTop="54dp"
        android:background="@drawable/eventsly_buttons"
        android:clickable="true"
        android:onClick="onViewClick"
        android:textSize="35sp"
        android:textStyle="italic"
        android:textColor="#fffdfdfe"
        android:layout_below="@+id/btnCreate"
        android:layout_alignEnd="@+id/btnCreate"
        android:layout_alignStart="@+id/btnCreate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/btnHostCheckIn"
        android:id="@+id/btnCheckIn"
        android:layout_below="@+id/btnView"
        android:layout_marginTop="59dp"
        android:layout_alignEnd="@+id/btnView"
        android:layout_alignStart="@+id/btnView"
        android:background="@drawable/eventsly_buttons"
        android:clickable="true"
        android:onClick="onCheckInClick"
        android:textColor="#fffdfdfe"
        android:textSize="35sp"
        android:textStyle="italic" />

</RelativeLayout>