<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Title"
    android:id="@+id/TitleScreen"
    android:background="@drawable/background">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:minHeight="75sp"
        android:background="@drawable/eventsly_buttons"
        android:clickable="true"
        android:textColor="#fffdfdfe"
        android:textSize="30sp"
        android:singleLine="false"
        android:textStyle="italic"
        android:layout_above="@+id/btnExit"
        android:layout_alignEnd="@+id/btnExit"
        android:layout_alignParentStart="true"
        android:onClick="onLoginClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignUp"
        android:id="@+id/btnSignUp"
        android:minHeight="75sp"
        android:clickable="true"
        android:textColor="#fffdfdfe"
        android:textSize="30sp"
        android:singleLine="false"
        android:layout_above="@+id/btnLogin"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:background="@drawable/eventsly_buttons"
        android:textStyle="italic"
        android:onClick="onSignUpClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExit"
        android:id="@+id/btnExit"
        android:minHeight="75sp"
        android:background="@drawable/eventsly_buttons"
        android:clickable="true"
        android:textColor="#fffdfdfe"
        android:textSize="30sp"
        android:singleLine="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textStyle="italic"
        android:onClick="onExitClick"/>

    <ImageView
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:id="@+id/imageView"
        android:background="@drawable/applogo"
        android:contentDescription="@string/imageLogo"
        android:paddingTop="40dp"
        android:layout_above="@+id/botPadding"
        android:layout_alignEnd="@+id/btnSignUp"
        android:layout_below="@+id/topPadding"
        android:layout_toEndOf="@+id/botPadding" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView"
        android:id="@+id/topPadding" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/botPadding"
        android:layout_above="@+id/btnSignUp"
        android:layout_alignParentStart="true" />

</RelativeLayout>
